Refactor UI and add ReportScreen form
Renamed `tableLayoutPanel` to `pnlAbout` in `About.Designer.cs` and added `okButton_MouseClick` event handler. Made `GetInstance` static in `About.cs` and updated constructor. Changed description in `About.resx` to "database-embed user credentials".

Updated `Credential.cs` to use nullable types for `Email`, `_password`, and `User`. Added `Include(c => c.User)` in `CredentialRepository.cs` for eager loading.

Reorganized `LoginScreen.Designer.cs` with new `GroupBox` controls for email and password. Added focus event handlers in `LoginScreen.cs`. Updated `LoginScreen.resx` accordingly.

Added `CredentialRepository.SaveorUpdate` call in `Program.cs`. Changed DB port in `Repository.cs` to `3306`.

Added `MaskedTextBox` for phone in `SignupScreen.Designer.cs`. Made `SystemMenu` constructor public and updated `aboutToolStripMenuItem_Click`.

Introduced new `ReportScreen` form with `TableLayoutPanel` and `ListBox` for reports.

--- a/About.resx
+++ b/About.resx
@@ -619,6 +619,6 @@
 </value>
   </data>
   <data name="textBoxDescription.Text" xml:space="preserve">
-    <value>This C# WinForms application is a login system that validates hardcoded user credentials to grant access. Upon successful login, it hides the login form and opens a main MDI container screen (System) which displays the user's name and admin status. This main screen controls access to an "Admin" registration menu based on the user's permissions and can open a separate form for user registration.</value>
+    <value>This C# WinForms application is a login system that validates database-embed user credentials to grant access. Upon successful login, it hides the login form and opens a main MDI container screen (System) which displays the user's name and admin status. This main screen controls access to an "Admin" registration menu based on the user's permissions and can open a separate form for user registration.</value>
   </data>
 </root>
