--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -119,6 +119,9 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="montes_claros_vertical_verde_jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\montes_claros_vertical_verde_jpg1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\montes_claros_vertical_verde_jpg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="montes_claros_vertical_verde_jpg1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\montes_claros_vertical_verde_jpg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
